-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4.2
-
-
97fe141f2 (dev), f20a020b7 (dev), 6cc919ab3 (dev), d7b80c9c9 (6.10), 384128261 (6.10), 712d8fd8a (6.10), 3a980cfd9 (6.9), 6f1079c53 (tqtc/lts-6.8), 661caa8ed (6.9), 8db777771 (6.9), 5ad865129 (tqtc/lts-6.8), 994081392 (tqtc/lts-6.8)
When using a shader effect that depends on a previous texture, the extra texture appears to be cleared to pure magenta on creation, but only on Apple Silicon/Ventura.
This does not occur with Qt 5 (tested with 5.15.3). The documentation states that an extra texture is created and it may make sense to ensure this is cleared on creation.
I have attached minimal examples for Qt 5 and Qt 6.
Expected output (this is seen on Apple Intel/Monterey and Windows 11):

Actual output on Apple Silicon/Ventura:

- relates to
-
QTBUG-118610 ShaderEffectSource in recursive mode with multisampling is broken
-
- Closed
-